--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@
 body{
     font-family: 'Work Sans', sans-serif;
 }
-.nav-container{
+.nav-container, main{
 min-height: 50px;
 display: flex;
 background: #FFF;
 box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 width: 1200px;
 max-width: 100%;
-margin: 0px auto;
+margin: 0px auto 30px;
 }
 .logo-container{
     width: 50%;
@@ -24,6 +24,12 @@ align-items: center;
 .logo-container p{
     font-size: 40px;
     font-weight: 600;
+}
+.font-color{
+    background: var(--Linear, linear-gradient(90deg, #FF42A5 13.13%, #FF42A5 87.94%));
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 .nav-items-container{
 width: 50%;  
@@ -54,3 +60,60 @@ i{
 .fa-tiktok{
     color: black;
 }
+main{
+    border: 1px solid red;
+    min-height: 500px;
+}
+.banner{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.banner-title{
+    width: 500px;
+    object-fit: cover;
+}
+.banner-title h3{
+    color: #0B0223;    font-size: 45px;    font-weight: 600;
+    margin-bottom: 0px;
+}
+.banner-title h1{
+    margin:5px auto;
+    font-size: 90px;
+    font-weight: 600;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.banner-title > p{
+color: #534C64;
+font-size: 20px;
+font-weight: 500;
+}
+.banner-title .btn-primary-1{
+padding: 20px 40px;
+font-size: 16px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 48px;
+background:  var(--Linear, linear-gradient(90deg, #FF42A5 13.13%, #FF42A5 87.94%));
+color: #FFF;
+border: 0px;
+}
+.banner-title .btn-primary-2{
+padding: 20px 40px;
+font-size: 16px;
+gap: 10px;
+border-radius: 48px;
+background: #4EC5F7;
+color: #FFF;
+border: 0px;
+}
+.banner-scenery img{
+    width:700px;
+}
+
