--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,700&family=Open+Sans&family=Work+Sans:ital,wght@0,400;0,500;0,700;0,800;1,600&display=swap');
+main{
+    box-sizing: border-box;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0px auto;
+}
 body{
     font-family: 'Work Sans', sans-serif;
 }
-.nav-container, main{
+.nav-container{
 min-height: 50px;
 display: flex;
 background: #FFF;
@@ -21,6 +27,7 @@ align-items: center;
     height:40px;
     margin-right: 10px;
 }
+.online-game-tittle,
 .logo-container p{
     font-size: 40px;
     font-weight: 600;
@@ -60,24 +67,19 @@ i{
 .fa-tiktok{
     color: black;
 }
-main{
-    border: 1px solid red;
-    min-height: 500px;
-}
 .banner{
-    align-items: center;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
 }
 .banner-title{
     width: 500px;
-    object-fit: cover;
 }
-.banner-title h3{
+.banner-title>h3{
     color: #0B0223;    font-size: 45px;    font-weight: 600;
     margin-bottom: 0px;
 }
-.banner-title h1{
+.banner-title>h1{
     margin:5px auto;
     font-size: 90px;
     font-weight: 600;
@@ -91,20 +93,20 @@ background-clip: text;
 }
 .banner-title > p{
 color: #534C64;
-font-size: 20px;
+font-size: 18px;
 font-weight: 500;
 }
-.banner-title .btn-primary-1{
+.btn-primary-1{
 padding: 20px 40px;
 font-size: 16px;
 align-items: flex-start;
 gap: 10px;
 border-radius: 48px;
-background:  var(--Linear, linear-gradient(90deg, #FF42A5 13.13%, #FF42A5 87.94%));
+background:#F948B2;
 color: #FFF;
 border: 0px;
 }
-.banner-title .btn-primary-2{
+.btn-primary-2{
 padding: 20px 40px;
 font-size: 16px;
 gap: 10px;
@@ -113,7 +115,48 @@ background: #4EC5F7;
 color: #FFF;
 border: 0px;
 }
-.banner-scenery img{
+.banner-scenery>img{
     width:700px;
+}
+.online-games{
+    text-align: center;
+}
+.online-game-tittle{
+    margin-bottom: 0px;
+}
+.online-games>p{
+    color: #534C64;
+    margin-top: 0px;
+}
+div img{
+    width: 360px;
+    height: 400px;
+    margin-right: 0px;
+}
+.online-games>div{
+    display: flex;
+    justify-content: space-between;
+    object-fit: cover;
+    margin-top: 50px;
+}
+.img-items{
+    display: flex;
+    flex-direction:column;
+}
+.img-items, .img-1, .img-2, .img-3, .end-part{
+    text-align: start;
+}
+.img-1{
+    color:black;
+}
+.img-items:hover{
+    color: red;
+    border: 2px solid saddlebrown;
+    border-radius: 10px;
+    background-color: #4EC5F7;
+}
+.complete-img{
+    display: flex;
+    flex-direction: column;
 }
 
