--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ i{
 .banner-title{
     width: 500px;
 }
+.banner-header,
 .banner-title>h3{
     color: #0B0223;    font-size: 45px;    font-weight: 600;
     margin-bottom: 0px;
@@ -120,6 +121,7 @@ border: 0px;
 }
 .online-games{
     text-align: center;
+    margin-bottom: 50px;
 }
 .online-game-tittle{
     margin-bottom: 0px;
@@ -159,4 +161,29 @@ div img{
     display: flex;
     flex-direction: column;
 }
-
+.free-games{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.banner-container{
+    width: 50%;
+}
+.banner-header{
+text-align: center;
+} 
+.game-instruction{
+    font-size: 18px;
+font-weight: 300px;
+text-align: center;
+}
+.banner-images{
+    width: 350px;
+}
+.style-img{
+    width: 200px;
+height: 200px;
+position: relative;
+top:-90px;
+right: 90px;
+}
