--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,19 @@ body{
     font-family: 'Work Sans', sans-serif;
 }
 .nav-container{
-min-height: 50px;
-display: flex;
-background: #FFF;
-box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-width: 1200px;
-max-width: 100%;
-margin: 0px auto 30px;
+    min-height: 50px;
+    display:flex ;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+    width: 1200px;
+    max-width: 100%;
+    margin: 0px auto 30px;
 }
 .logo-container{
-    width: 50%;
+width: 50%;
 display: flex;
 align-items: center;
+
 }
 .logo-container img{
     width: 40px;
@@ -232,7 +233,6 @@ right: 90px;
 .logo-container{
     max-width: 100%;
     margin: 0px auto;
-    justify-content: center;
 }
 div ul{
     display: flex;
@@ -252,5 +252,9 @@ ul >li{
 }
 .font-icons i{
     margin-right: 40px;
+}
+.div{
+    display: flex;
+    justify-content: center;
 }
 
